# holocore

./: Cargo.toml  README.md
src/: lib.rs  processor.rs
src/components/: mod.rs
src/components/control/: mod.rs
src/components/processing_units/: common.rs  factory.rs  mock.rs  mod.rs  order_manager.rs  orderbook_manager.rs
src/components/processing_units/strategy/: base.rs  factory.rs  mod.rs  trend_following.rs
src/components/sinks/: factory.rs  file.rs  mock.rs  mod.rs
src/components/sinks/binance/: api.rs  client.rs  mod.rs  model.rs  spot.rs
src/components/sources/: factory.rs  file.rs  mock.rs  mod.rs
src/components/sources/binance/: mod.rs  model.rs  spot.rs
src/config/: mod.rs  pus.rs  sinks.rs  sources.rs
src/objects/: common.rs  kline.rs  level.rs  market.rs  mock.rs  mod.rs  new_order.rs  orderbook.rs  orderbook_update.rs  trade.rs
src/utils/: http.rs  mod.rs  redis.rs  time.rs
static_data/: binance_reference_data.json  dev.toml  single_orderbook_manager.toml
static_data/prod/: books.toml  klines.toml  trades.toml
