[package]
name = "holocore"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "main"

[lib]
name = "holocore"

[dependencies]
chrono = "0.4.22"
confy = "0.4.0"
env_logger = "0.9.0"
fixed = { version = "2.0.0-alpha.6", features = [ "serde" ] }
flume = "0.10.14"
futures = "0.3.23"
hex = "0.4"
hmac = "0.11.0"
log = "0.4.17"
redis = "0.21.6"
reqwest = { version = "0.11.11", features = [ "blocking", "json" ] }
rocket = { version = "0.5.0-rc.2", features = [ "json" ] }
serde = { version = "1.0.126", features = [ "derive" ] }
serde_json = "1.0"
sha2 = "0.9"
tokio = { version = "1.20.1", features = [ "full" ] }
tokio-tungstenite = { version = "0.17.2", features = [ "native-tls" ] }
url = "2.2.2"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"
]
